# Iris-startpage

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json  makefile
config/: config.lua  style.css
default_config/: config.lua  style.css
resources/: exempleconfig.json  weblink.txt
src/: CMakeLists.txt  EXAMPLE_CONFIG.hpp  app.cpp  app.hpp  config.cpp  config.hpp  css.hpp  error.hpp  errors.hpp  image_processor.cpp  image_processor.hpp  loader.cpp  loader.hpp  macros.hpp  main.cpp  pixwrap.cpp  pixwrap.hpp  xdg.cpp  xdg.hpp
src/const/: css.hpp  error.hpp  file.hpp  label.hpp
src/gtk/: application.cpp  application.hpp  background.cpp  background.hpp  frame.cpp  frame.hpp
src/gtk/core/: application.cpp  application.hpp  background.cpp  background.hpp
src/gtk/frame/: frame.cpp  frame.hpp  image.cpp  image.hpp  left.cpp  left.hpp  right.hpp
src/gtk/widgets/: blur.cpp  frame.cpp  frame.hpp  gif.cpp  gif.hpp  image.hpp  module.cpp  module.hpp  row.cpp  row.hpp
src/lua/: ConfigRetriever.cpp  config.cpp  config.hpp  debugger.cpp  debugger.hpp
src/ui/: page.cpp  page.hpp  row.cpp  row.hpp  search.cpp  search.hpp  window.cpp  window.hpp
src/util/: image_processor.cpp  image_processor.hpp
